adding generic landmark file readers - looks at file extension to determine whether to load Slicer .fcsv or .json

--- a/lib/file_formats/CMakeLists.txt
+++ b/lib/file_formats/CMakeLists.txt
@@ -41,7 +41,8 @@ set(xreg_file_formats_src ${XREG_CUR_LIB_HEADERS}
                           xregStaRawVol.cpp
                           xregReadProjDataFromDICOM.cpp
                           xregRTKGeom.cpp
-                          xregSlicerMarkupsJSON.cpp)
+                          xregSlicerMarkupsJSON.cpp
+                          xregLandmarkFiles.cpp)
 
 if (APPLE)
   set(xreg_file_formats_src ${xreg_file_formats_src}
