--- a/lib/basic_math/CMakeLists.txt
+++ b/lib/basic_math/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2020 Robert Grupp
+# Copyright (c) 2020-2022 Robert Grupp
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -32,6 +32,7 @@ add_library(xreg_basic_math OBJECT ${XREG_CUR_LIB_HEADERS}
                                    xregLogNormDist.cpp
                                    xregNullDist.cpp
                                    xregNormDistFit.cpp
+                                   xregMultivarNormDistFit.cpp
                                    xregPolyFindZeros.cpp
                                    xregBasicStats.cpp
                                    xregSampleUniformUnitVecs.cpp
